--- a/app/src/main/res/layout-v26/activity_see_results.xml
+++ b/app/src/main/res/layout-v26/activity_see_results.xml
@@ -23,8 +23,8 @@
             android:id="@+id/helpmain"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginHorizontal="30dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="30sp"
             android:layout_marginTop="28dp"
             android:layout_marginBottom="17dp"
             android:background="@drawable/help" />
@@ -62,18 +62,18 @@
         app:layout_constraintVertical_bias="0.75">
 
         <FrameLayout
-            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
-            android:layout_height="520dp"
-            >
+            android:layout_height="583dp"
+            android:layout_marginTop="15dp">
+
             <TextView
                 android:id="@+id/numberMakeCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:fontFamily="@font/lato_bold"
-                android:textAlignment="center"
                 android:text="1"
+                android:textAlignment="center"
                 android:textColor="#f4bfbf"
                 android:textSize="40sp" />
 
@@ -122,17 +122,19 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/code"
                 android:layout_width="match_parent"
                 android:layout_height="50sp"
-                android:layout_marginTop="50sp"
                 android:layout_marginHorizontal="20sp"
+                android:layout_marginTop="50sp"
                 android:fontFamily="@font/lato_bold"
-                android:textAlignment="center"
                 android:text="CODE"
+                android:textAlignment="center"
                 android:textColor="#faf0d7"
                 android:textSize="25sp" />
+
             <FrameLayout
                 android:id="@+id/fragment_container_student"
                 android:layout_width="match_parent"
@@ -141,25 +143,36 @@
                 android:layout_marginBottom="90sp"></FrameLayout>
 
 
-
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/create_questionnaire"
-                android:layout_width="200sp"
-                android:layout_marginTop="440sp"
-                android:layout_height="70dp"
-                android:textColor="#FFF"
-                android:background="@drawable/buttongradient"
                 style="@style/FixedButtonText"
+                android:layout_width="200sp"
+                android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="440sp"
+                android:background="@drawable/buttongradient"
                 android:fontFamily="@font/lato_bold"
-                android:text="Terminar" />
+                android:text="Terminar"
+                android:textColor="#FFF" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/delete_questionnaire"
+                style="@style/FixedButtonText"
+                android:layout_width="200sp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="500sp"
+                android:background="@drawable/buttongradient"
+                android:fontFamily="@font/lato_bold"
+                android:text="Eliminar"
+                android:textColor="#FFF" />
 
         </FrameLayout>
 
         <FrameLayout
             android:id="@+id/frameLayout3"
             android:layout_width="362dp"
-            android:layout_height="70dp"
+            android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:background="@drawable/main_shape"
 
