--- a/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
+++ b/app/src/main/res/layout/activity_questionnaire_teacher_make.xml
@@ -135,7 +135,7 @@
             <FrameLayout
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="380dp"
                 android:layout_marginTop="50sp"
                 android:layout_marginBottom="90sp"></FrameLayout>
 
